--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -191,8 +191,6 @@
 @media (max-width: 880px) {
   .sidebar {
     padding-top: 9.3rem;
-    height: max-content;
-    min-height: max-content;
 
     &-menu-item {
       width: 60vw;
