--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
   font-family: 'Nunito', sans-serif;
   width: 100vw;
   overflow-x: hidden;
-  background: #000;
+  background: #e5e5e5;
 }
 
 
